--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
 db.sqlite3
+django_project/__pycache__/__init__.cpython-36.pyc
+django_project/__pycache__/settings.cpython-36.pyc
+django_project/__pycache__/urls.cpython-36.pyc
+django_project/__pycache__/wsgi.cpython-36.pyc
+main/__pycache__/__init__.cpython-36.pyc
+main/__pycache__/admin.cpython-36.pyc
+main/__pycache__/apps.cpython-36.pyc
+main/__pycache__/models.cpython-36.pyc
+main/__pycache__/urls.cpython-36.pyc
+main/__pycache__/views.cpython-36.pyc
+main/migrations/0001_initial.py
+main/migrations/__pycache__/
+000-default.conf
+apache2.conf
+
