--- a/000-default.conf
+++ b/000-default.conf
@@ -10,5 +10,6 @@
         ErrorLog /var/www/logs/error.log
         CustomLog /var/www/logs/custom.log combined
 #       WSGIPythonPath /var/www/mysite
+        Alias /static /var/www/Demo_DevOps/static
 
 </VirtualHost>
