web site final mode

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ main/__pycache__/views.cpython-36.pyc
 main/migrations/0001_initial.py
 main/migrations/__pycache__/
 static/
+*.pyc
+main/tests/chromedriver
+
