--- a/pg_hba.conf
+++ b/pg_hba.conf
@@ -82,7 +82,7 @@
 # maintenance (custom daily cronjobs, replication, and similar tasks).
 #
 # Database administrative login by Unix domain socket
-local   all             postgres                                md5
+local   all             postgres                                ident
 
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
 
