DOcker file added

--- a/000-default.conf
+++ b/000-default.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
 
-        ServerName mysite.org
+        ServerName localhost
         ServerAlias www.mysite.org
         ServerAdmin ozgurdede006@gmail.com
 
