--- a/apache2.conf
+++ b/apache2.conf
@@ -53,6 +53,8 @@ WSGIPythonPath /var/www/Demo_DevOps
 #   work with the default configuration.
 
 
+ServerName localhost
+
 # Global configuration
 #
 
