--- a/Dockerfile_djTest
+++ b/Dockerfile_djTest
@@ -5,5 +5,6 @@ RUN mv /var/www/Demo_DevOps/settings.py /var/www/Demo_DevOps/django_project/
 #RUN python3 manage.py collectstatic
 RUN python3 manage.py makemigrations
 RUN python3 manage.py migrate
-CMD  python3 manage.py test main.tests.test_CT
-#ENTRYPOINT ["python3 /var/www/Demo_DevOps/manage.py test"]
+CMD python3 manage.py test  main.tests.test_CT
+#ENTRYPOINT ["python3 manage.py test"]
+#CMD ["python3 manage.py test main.tests.test_CT"]
